2005-01-23 Axel Simon <A.Simon@kent.ac.uk>

	* Makefile.am, mk/common.mk: Resurrect dependency generation under
	the new scheme of inferring the current package. Dependency files
	are now always loaded but only recreated if we are not cleaning or
	already building dependencies.

	* mk/common.mk: Set the initial heap size for tools to 400m to
	accommodate for less fortunate people.

	* tools/c2hs/chs/CHS.hs: Emit a newline after a LINE directive if
	the next verbatim text does not start with one. This fixes a
	problem with gcc on Mac OS.

2005-01-20 Duncan Coutts <duncan@coutts.uklinux.net>

	* Makefile.am: make each package's LIBS include the LIBS of its
	dependent packages, which is the same as we do for the CFLAGS.

	* configure.ac: bump version to 0.9.7_rc4

2005-01-19 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/c2hs/c/CLexer.hs: make c2hs understand the __signed,
	__signed__, __volatile and __volatile__ portability keyword synonyms.

2005-01-18 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/c2hs/c/CLexer.hs: trivial fix to allows c2hs to process the
	glib/gtk 2.6 headders.

	* gtk/Graphics/UI/Gtk/TreeList/TreeStore.chs.pp,
	gtk/Graphics/UI/Gtk/TreeList/ListStore.chs.pp: cope with building
	against Gtk+ version 2.1.0 which is a version that Sun shipped with
	its version of Gnome 2.

	* acinclude.m4: add a macro to deal with a hack on Linux systems where
	GHCi cannot load the pthread library. Everything still works if we
	just strip out the -lpthread flag because pthread is a dependency of
	other libraries I guess.

	* configure.ac: 
	1. Do not build GHCi .o files on Solaris because it does not work due
	to ghc-pkg using an incorrect linker command.
	2. Add a hack to add a runtime library search path when linking
	programs that use mozembed.
	3. Use the above mentioned pthread hack for each package that uses
	pthread.
	4. Define some extra conditionals for Gtk versions so we know which
	demos to build upon make installcheck.