@@ -1,3 +1,13 @@
+2005-01-23 Duncan Coutts <duncan@coutts.uklinux.net>
+
+	* tools/apiGen/formatXml.c, tools/apiGen/gapi_parser.pl: add extra
+	bits of the Gtk# gapi system.
+
+	* tools/apiGen/Makefile, tools/apiGen/mkdocxml.sh: add Makefile to
+	automate everything better.
+
+	* tools/apiGen/gen-all.sh: retire previous automation script
+
 2005-01-23 Axel Simon <A.Simon@kent.ac.uk>
 
 	* Makefile.am, mk/common.mk: Resurrect dependency generation under
